@@ -94,14 +94,14 @@ void test_running_torrent(boost::intrusive_ptr<torrent_info> info, size_type fil
 	{
 		h.piece_priority(0, 1);
 		st = h.status();
-		TEST_CHECK(st.pieces[0] == false);
+		TEST_CHECK(st.pieces.size() > 0 && st.pieces[0] == false);
 		std::vector<char> piece(info->piece_length());
 		for (int i = 0; i < int(piece.size()); ++i)
 			piece[i] = (i % 26) + 'A';
 		h.add_piece(0, &piece[0]);
 		test_sleep(10000);
 		st = h.status();
-		TEST_CHECK(st.pieces[0] == true);
+		TEST_CHECK(st.pieces.size() > 0 && st.pieces[0] == true);
 
 		std::cout << "reading piece 0" << std::endl;
 		h.read_piece(0);
